--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,16 +6,9 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+    <title>pdf-slicer</title>
   </head>
   <body style="margin:0;overflow: hidden;">
     <div id="root"></div>
   </body>
-  <script>
-    window.electron.ipcRenderer.once('ipc-example', (arg) => {
-      console.log(arg);
-    });
-
-    window.electron.ipcRenderer.myPing();
-  </script>
 </html>
